--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
-    "mongodb": "^3.1.1"
+    "mongodb": "^3.1.1",
+    "server": "^1.0.18"
   },
   "devDependencies": {},
   "scripts": {
@@ -25,5 +26,6 @@
   "bugs": {
     "url": "https://github.com/tomerberman/rentapp/issues"
   },
-  "homepage": "https://github.com/tomerberman/rentapp#readme"
+  "homepage": "https://github.com/tomerberman/rentapp#readme",
+  "description": ""
 }
